--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,36 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Diretórios de build
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Ignorar arquivo de configuração
+config.ts
 .env
+
+# Arquivos de dependências geradas automaticamente
+package-lock.json
+yarn.lock
+
+# Persistência do Redux
+persist/
