--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASS=root
-DB_NAME=justix
-JWT_SECRET=root
+DB_HOST=sql10.freemysqlhosting.net
+DB_USER=sql10745873
+DB_PASS=DwUzLyF32j
+DB_NAME=sql10745873
+JWT_SECRET=DwUzLyF32j
 
 
 PORT=3001
