--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-DB_HOST=sql10.freemysqlhosting.net
-DB_USER=sql10745873
-DB_PASS=DwUzLyF32j
-DB_NAME=sql10745873
-JWT_SECRET=DwUzLyF32j
+DB_HOST=junction.proxy.rlwy.net
+DB_USER=root
+DB_PASS=CuMvCLcEVLhffSElncdjNKlRRneqmZud
+DB_NAME=railway
+JWT_SECRET=CuMvCLcEVLhffSElncdjNKlRRneqmZud
+DB_PORT=15046
+
 
 
 PORT=3001
